wetty/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wetty
  labels:
    name: wetty
