wetty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wetty-k8s-control-service
  namespace: wetty
  labels:
    app: wetty-k8s-control
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: wetty-k8s-control
