wetty/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wetty-k8s-control-ingressroute
  namespace: wetty
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k8s-control.pindaroli.org`)
      kind: Rule
      services:
        - name: wetty-k8s-control-service
          port: 80
      middlewares:
        - name: wetty-auth
        - name: wetty-headers
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wetty-k8s-control-redirect
  namespace: wetty
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`k8s-control.pindaroli.org`)
      kind: Rule
      services:
        - name: wetty-k8s-control-service
          port: 80
      middlewares:
        - name: redirect-to-https
